--- a/refs.bib
+++ b/refs.bib
@@ -43,3 +43,12 @@
   
 	journal = {Monthly Notices of the Royal Astronomical Society}
 }
+
+@BOOK{Binney&Tremaine,
+       author = {{Binney}, James and {Tremaine}, Scott},
+        title = "{Galactic Dynamics: Second Edition}",
+         year = 2008,
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2008gady.book.....B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
