--- a/refs.bib
+++ b/refs.bib
@@ -44,6 +44,22 @@
 	journal = {Monthly Notices of the Royal Astronomical Society}
 }
 
+@article{NFW1996,
+       author = {{Navarro}, Julio F. and {Frenk}, Carlos S. and {White}, Simon D.~M.},
+        title = "{The Structure of Cold Dark Matter Halos}",
+     keywords = {COSMOLOGY: THEORY, COSMOLOGY: DARK MATTER, GALAXIES: HALOS, METHODS: NUMERICAL, Astrophysics},
+         year = 1996,
+        month = may,
+       volume = {462},
+        pages = {563},
+          doi = {10.1086/177173},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/9508025},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1996ApJ...462..563N},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @BOOK{Binney&Tremaine,
        author = {{Binney}, James and {Tremaine}, Scott},
         title = "{Galactic Dynamics: Second Edition}",
@@ -51,4 +67,6 @@
        adsurl = {https://ui.adsabs.harvard.edu/abs/2008gady.book.....B},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+
 
